<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vris_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="swpants05@gmail.com">wosasa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>vris_sensors</depend>
  <depend>vris_base_hw</depend>
  <depend>vris_slam</depend>
  <depend>vris_navigation</depend>
  <depend>vris_vr_bridge</depend>
  <depend>vris_mode_manager</depend>
  <depend>vris_bt</depend>
  <depend>vris_scenarios</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
